--- a/src/FishTank/FishTank.csproj
+++ b/src/FishTank/FishTank.csproj
@@ -43,8 +43,12 @@
     <Compile Include="..\CommonAssemblyInfo.cs">
       <Link>Properties\CommonAssemblyInfo.cs</Link>
     </Compile>
+    <Compile Include="BabelFish.cs" />
+    <Compile Include="AngelFish.cs" />
+    <Compile Include="GoldFish.cs" />
     <Compile Include="IFish.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tank.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
