Added Xml serialization

--- a/src/FishTank/FishTank.csproj
+++ b/src/FishTank/FishTank.csproj
@@ -49,6 +49,7 @@
     <Compile Include="IFish.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tank.cs" />
+    <Compile Include="XmlTankSerializer.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
